STYLES: Add overflow-x hidden to prevent horizontal scrollbars

--- a/src/components/ProjectsList.scss
+++ b/src/components/ProjectsList.scss
@@ -6,4 +6,6 @@
     grid-template-rows: auto;
     gap: 3rem;
     margin: 0 auto;
+
+    overflow-x: hidden;
 }
